--- a/git_hooks_go/config.ini
+++ b/git_hooks_go/config.ini
@@ -1,8 +1,11 @@
 [selected_scripts]
-commit-msg = add_username,add_branch_name
-post-update = update_git_hooks_go
+commit-msg = add_branch_name,add_username
+pre-commit = validate_behave_json,do_not_commit_on_master
+
 
 [config]
+# 是否启用
+able = 1
 # 自动更新git_hooks_go
 auto_update = 1
 # 更新配置文件config.ini
