--- a/weapp/app.json
+++ b/weapp/app.json
@@ -1,9 +1,9 @@
 {	
-	"name": "sign",
+	"name": "powerme",
 	"resources": [{
-		"name": "Sign",
+		"name": "PowerMe",
 		"need_user_participant": true,
-		"display_name": "签到",
+		"display_name": "微助力",
 		"enable_termite": true
 	}]
 }
