--- a/weapp/features/ui/home_page/shop_configuration_link.feature.properties
+++ b/weapp/features/ui/home_page/shop_configuration_link.feature.properties
@@ -5,5 +5,6 @@ Feature: 店铺导航配置连接
 """
 	1.配置一级菜单为'连接',weapp点击店铺导航一级菜单'连接'成功跳转到'连接'
 	2.配置一级菜单为'个人中心连接',未关注会员点击店铺导航一级菜单'个人中心连接'弹出'引导关注二维码'
+	后续补充
 """
 
