[git_hooks_go][朱天琦]git_hooks_go修复BUG，改进脚本

--- a/git_hooks_go/config.ini
+++ b/git_hooks_go/config.ini
@@ -1,6 +1,7 @@
 [selected_scripts]
-commit-msg = add_branch_name,add_username
+commit-msg = add_username,add_branch_name
 pre-commit = validate_behave_json,do_not_commit_on_master
+
 
 
 [config]
@@ -9,6 +10,5 @@ able = 1
 # 自动更新git_hooks_go
 auto_update = 1
 # 更新配置文件config.ini
-update_config = 0
-
+update_config = 1
 
