--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 # 对应hook类型启用的脚本，注意填写脚本完整文件名
 commit-msg = add_username.py,add_branch_name.py,feature_watcher.py
 pre-commit =
-pre-push = 
+pre-push = push_notify.py
 
 [config]
 # 是否启用
